fixing text in show with overflow-hidden and text-overflow

--- a/vamlingbolaget/theme/static/css/vb.css
+++ b/vamlingbolaget/theme/static/css/vb.css
@@ -142,6 +142,9 @@ text-shadow: 0 1px 0 #eeeeee;
 .image_description {
     padding: 2px;
     margin-top: -10px;
+    white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden
 }
 
 .collection_list img {
@@ -315,6 +318,10 @@ border-radius: 4px;
 
 textarea {
 height:260px
+}
+
+#id_voucher {
+width:120px; 
 }
 
 textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, input[type="number"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="color"]:focus, .uneditable-input:focus {
